--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,11 @@
-<p id="notice"><%= notice %></p>
+<!-- <p id="notice"><%= notice %></p> -->
 
 <h1>iCarrito</h1>
-<h2>Inicio</h2>
+<ul class="nav nav-tabs">
+  <li role="presentation" class="active"><a href="#">Inicio</a></li>
+  <li role="presentation"><a href="#">Facturador</a></li>
+  <li role="presentation"><a href="#">Inventarios</a></li>
+</ul>
 
 <table>
   <thead>
