--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>iCarrito</title>
-    <%= csrf_meta_tags %>
+	<title>iCarrito</title>
+	<%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+	<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-
-    <p class="navbar-text pull-right">
-    <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-    <% else %>
-      <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-      <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-    <% end %>
-    </p>
-    <% if notice %>
-      <p class="alert alert-success"><%= notice %></p>
-    <% end %>
-    <% if alert %>
-      <p class="alert alert-danger"><%= alert %></p>
-    <% end %>
-    <%= yield %>
+  		<!--jorge-->
+	  	<header class="navbar">	  		
+	  		<nav class="nav navbar-text pull-right">
+				<% if user_signed_in? %>
+				  Logged in as <strong><%= current_user.email %></strong>.
+				  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'nav-link navbar-link' %> |
+				  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'nav-link navbar-link'  %>
+				<% else %>
+				  <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link navbar-link'  %> |
+				  <%= link_to "Login", new_user_session_path, :class => 'nav-link navbar-link'  %>
+				<% end %>
+			</nav>
+			<% if notice %>
+			  <p class="alert alert-success"><%= notice %></p>
+			<% end %>
+			<% if alert %>
+			  <p class="alert alert-danger"><%= alert %></p>
+			<% end %>
+	  	</header>
+	  	<div class="container-fluid page">
+			<%= yield %>
+	  	</div>
   </body>
 </html>
