--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,40 +1,40 @@
 <!-- <p id="notice"><%= notice %></p> -->
-
-<h1>iCarrito</h1>
+<!--jorge-->
+<h3>Listado de productos</h3>
 <ul class="nav nav-tabs">
   <li role="presentation" class="active"><a href="#">Inicio</a></li>
   <li role="presentation"><a href="#">Facturador</a></li>
   <li role="presentation"><a href="#">Inventarios</a></li>
 </ul>
 
-<table>
+<table class="table responsive" id="datatable">
   <thead>
     <tr>
-      <th>#</th>
-      <th>Producto</th>
-      <th>Precio</th>
-      <th>Stock</th>
-      <th>Estado</th>
-      <th colspan="3"></th>
+      <th scope="col">#</th>
+      <th scope="col">Producto</th>
+      <th scope="col">Precio</th>
+      <th scope="col">Stock</th>
+      <th scope="col">Estado</th>
+      <th scope="col">Acciones</th>
+    
     </tr>
   </thead>
 
   <tbody>
     <% @products.each do |product| %>
       <tr>
-        <td><%= product.id %></td>
+        <th scope="row"><%= product.id %></th>
         <td><%= product.name %></td>
         <td><%= product.price %></td>
         <td><%= product.stock %></td>
         <td><%= product.status %></td>
-        <td><%= link_to 'Mostrar', product %></td>
-        <td><%= link_to 'Editar', edit_product_path(product) %></td>
-        <td><%= link_to 'Eliminar', product, method: :delete, data: { confirm: 'Estas seguro?' } %></td>
+        <td><%= link_to 'Mostrar', product %>
+        <%= link_to 'Editar', edit_product_path(product) %>
+        <%= link_to 'Eliminar', product, method: :delete, data: { confirm: 'Estas seguro?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
 <br>
 
 <%= link_to 'Nuevo Producto', new_product_path %>
